unpackaged/main/default/objects/Lead/fields/Checkbox2__c.field-meta.xml
<CustomField>
    <fullName>Checkbox2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox2</label>
    <type>Checkbox</type>
</CustomField>