unpackaged/main/default/objects/Lead/fields/more_notes__c.field-meta.xml
<CustomField>
    <fullName>more_notes__c</fullName>
    <label>more notes</label>
    <type>TextArea</type>
</CustomField>