unpackaged/main/default/objects/Lead/fields/test_checkbox__c.field-meta.xml
<CustomField>
    <fullName>test_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test checkbox</label>
    <type>Checkbox</type>
</CustomField>